[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.0.5" 
name = "example-package"

authors = [
  { name="Shreya Singh", email="shreyasingh_18@yahoo.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
